[gd_scene load_steps=3 format=3 uid="uid://lpgbh3a740ln"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_d37rk"]
[ext_resource type="FontFile" uid="uid://s15272omc2m3" path="res://assets/fonts/retro.ttf" id="1_jan38"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_d37rk")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 151.0
offset_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_jan38")
theme_override_font_sizes/font_size = 40
text = "
"
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -151.0
offset_bottom = 51.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_jan38")
theme_override_font_sizes/font_size = 40
vertical_alignment = 1

[node name="StartLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.5
offset_top = -25.5
offset_right = 160.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_jan38")
theme_override_font_sizes/font_size = 40
text = "PRESS SPACE TO PLAY"
vertical_alignment = 1
